# ri-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
ri-cookie-header-string/: Cargo.toml  README.md
ri-cookie-header-string/examples/: cookie_usage.rs  reqwest_usage.rs
ri-cookie-header-string/src/: lib.rs
