[package]
name = "ri-cookie-header-string"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "A library for parsing HTTP Cookie header strings into structured cookie objects."
keywords = ["cookie", "http", "parsing", "header", "percent-encoding"]
categories = ["web-programming", "parsing"]
documentation = "https://docs.rs/ri-cookie-header-string"

[features]
default = []
percent-encode = ["cookie/percent-encode"]
reqwest = ["dep:reqwest"]

[dependencies]
cookie = { workspace = true, default-features = false }
reqwest = { version = "0.12", features = ["cookies"], optional = true }